fixed alignment

--- a/src/components/blogCard/BlogCard.css
+++ b/src/components/blogCard/BlogCard.css
@@ -10,16 +10,16 @@
 
 .blog-title {
   color: #262626;
-  font-size: 22px;
+  font-size: 18px;
   line-height: 24px;
   font-weight: 700;
   margin-left: 20px;
   margin-right: 20px;
-  margin-bottom: 14px;
+  margin-bottom: 20px;
   margin-top: 32px;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
 }
 
@@ -31,7 +31,7 @@
   padding: 0px 20px;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 4;
+  -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
   margin: 0px;
 }
@@ -97,13 +97,17 @@
   color: #ffffff;
 }
 
-@media screen and (max-width: 480px) and (min-width: 300px), (min-width: 925px) and (max-width: 1024px), (min-width: 1405px) and (max-width: 1550px) {
+@media screen and (max-width: 480px) and (min-width: 300px),
+  (min-width: 925px) and (max-width: 1024px),
+  (min-width: 1405px) and (max-width: 1550px) {
   .blog-card:hover::before {
     transform: scale(30);
   }
 }
 
-@media screen and (min-width: 481px) and (max-width: 675px), (min-width: 1025px) and (max-width: 1404px), (min-width: 1551px) {
+@media screen and (min-width: 481px) and (max-width: 675px),
+  (min-width: 1025px) and (max-width: 1404px),
+  (min-width: 1551px) {
   .blog-card:hover::before {
     transform: scale(40);
   }
